@@ -1,6 +1,6 @@
-# [Inside HotSpot] JVM新日志接口-xlog
+# [Inside HotSpot] JVM新日志接口-Xlog
 
-JVM的日志记录比较杂乱，为此[JEP158](http://openjdk.java.net/jeps/158)引入了统一的日志记录接口`-xlog`。该接口可以分级别，分组件，分等级的记录用户想要的信息。
+JVM的日志记录比较杂乱，为此[JEP158](http://openjdk.java.net/jeps/158)引入了统一的日志记录接口`-Xlog`。该接口可以分级别，分组件，分等级的记录用户想要的信息。
 它的详细语法如下：
 ```cpp
 -Xlog[:option]
@@ -39,18 +39,18 @@ JVM的日志记录比较杂乱，为此[JEP158](http://openjdk.java.net/jeps/158
 ```
 
 ## tag
-tag可以记录表示哪一方面的数据，比如加上`-xlog:gc`表示记录gc信息：
+tag可以记录表示哪一方面的数据，比如加上`-Xlog:gc`表示记录gc信息：
 ```cs
 [4.429s][info][gc] GC(1) Pause Full (Allocation Failure) 1M->1M(123M) 30.103ms
 [4.430s][info][gc] GC(0) Pause Young (Allocation Failure) 8M->1M(123M) 40.066ms
 [5.244s][info][gc] GC(3) Pause Full (Allocation Failure) 1025M->1M(1147M) 135.748ms
 ```
-然后加上`-xlog:class*`可以记录类信息，`*`表示表示所有和class相关的信息；`-xlog:os`记录os模块相关信息：
+然后加上`-Xlog:class*`可以记录类信息，`*`表示表示所有和class相关的信息；`-Xlog:os`记录os模块相关信息：
 ```cs
 [0.281s][info][os] SafePoint Polling address, bad (protected) page:0x000002083a8c0000, good (unprotected) page:0x000002083a8c1000
 ```
 ## level
-level可以输出对于级别，比如`-xlog:gc=trace`
+level可以输出对于级别，比如`-Xlog:gc=trace`
 ```cs
 [0.113s][info][gc] Using Serial
 [0.900s][trace][gc] GC(0) Young invoke=1 size=1073741840
@@ -63,7 +63,7 @@ level可以输出对于级别，比如`-xlog:gc=trace`
 比trace低的都会输出。
 
 ## file
-使用file可以将输出dump到文件,比如`-xlog:gc*=trace:file`
+使用file可以将输出dump到文件,比如`-Xlog:gc*=trace:file`
 
 ## and more
-JEP上提到的`-xlog:rt,-xlog:compiler`在hotspot12中还没有实现，可以使用`-xlog:all`输出目前虚拟机使用到该接口的所有logging信息。不过个人感觉目前这个东西最大的用处就是输出GC信息。。
+JEP上提到的`-Xlog:rt,-Xlog:compiler`在hotspot12中还没有实现，可以使用`-Xlog:all`输出目前虚拟机使用到该接口的所有logging信息。不过个人感觉目前这个东西最大的用处就是输出GC信息。。
